# xcp-69

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  types.rs
src/bitcoin_utils/: keys.rs  mod.rs  psbt.rs  tagged.rs  tapscript.rs  vanity.rs
src/commands/: finalize_parents.rs  mod.rs  patch_funding.rs  prepare_funding.rs  setup.rs
src/counterparty/: mod.rs
